Regression: Not possible to transfer Color Attributs Layer with "Transfer Mesh Data Layout" #103400

Closed
opened 2022-12-22 10:29:20 +01:00 by Florian Oswald · 12 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: 3.1

Caused by eae36be372.
Patch in D16935: Fix #103400: Transfer Mesh Data Layout broken for color attributes

Not possible to transfer Color Attributs Layer with "Transfer Mesh Data Layout"

  1. Add a mesh with more than 1 Color Attributs Layers
  2. Crate a Mesh with none Color Attributs Layers
  3. Select the 2 Meshes, the one with the Color Attributs Layers should be highlighted
  4. Object -> Link- Transfer Data -> Transfern Mesh Data Layout
  5. Select Data Type : Colors
  6. Layers selection is missing (Channels, All Layers, Active Layers)
  7. nothing was transfered
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: 3.1 Caused by eae36be372. Patch in [D16935: Fix #103400: Transfer Mesh Data Layout broken for color attributes](https://archive.blender.org/developer/D16935) Not possible to transfer Color Attributs Layer with "Transfer Mesh Data Layout" 1. Add a mesh with more than 1 Color Attributs Layers 2. Crate a Mesh with none Color Attributs Layers 3. Select the 2 Meshes, the one with the Color Attributs Layers should be highlighted 4. Object -> Link- Transfer Data -> Transfern Mesh Data Layout 5. Select Data Type : Colors 6. **Layers selection is missing** (Channels, All Layers, Active Layers) 7. nothing was transfered
Author

Added subscriber: @Florian-3

Added subscriber: @Florian-3
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce, but can't investigating this area of the code well, so not sure about the behavior.

Can reproduce, but can't investigating this area of the code well, so not sure about the behavior.

Added subscriber: @mod_moder

Added subscriber: @mod_moder

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2023-01-03 15:37:20 +01:00
Member

Definitely a regression, will check on this.

Definitely a regression, will check on this.

This issue was referenced by 93d84e87b2

This issue was referenced by 93d84e87b26c85f814f4a2537e73387628491b68
Member

Added subscribers: @HooglyBoogly, @ideasman42, @JosephEagar

Added subscribers: @HooglyBoogly, @ideasman42, @JosephEagar
Member
Caused by eae36be372. @JosephEagar @HooglyBoogly @ideasman42 There is a fix for this in [D16935: Fix #103400: Transfer Mesh Data Layout broken for color attributes](https://archive.blender.org/developer/D16935) to review.
Philipp Oeser changed title from Not possible to transfer Color Attributs Layer with "Transfer Mesh Data Layout" to Regression: Not possible to transfer Color Attributs Layer with "Transfer Mesh Data Layout" 2023-01-06 16:44:38 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103400
No description provided.